<resources>
    <string name="app_name">Smash Randomizer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="selection_file_key">com.jacobgb24.smashrandomizer.SELECTIONS_FILE_KEY</string>
    <string name="begin_ironman">Begin Ironman</string>
    <string name="view_pool">View Pool</string>
    <string name="new_random_character">New Random Character</string>
    <string name="edit_pool">Edit the active pool</string>
    <string name="title_pool">Pool:\u0020</string>
    <string name="iron_instructions">In an Ironman, your pool will be shuffled. The goal is to win with every character in the order they are presented.</string>
    <string name="return_home">Return Home</string>
    <string name="final_results">Final Results</string>
    <string name="start">Start</string>
    <string name="change">Change</string>
    <string name="on_deck">On Deck:</string>
    <string name="lose">Lose</string>
    <string name="win">Win</string>
    <string name="delete_active_pool">Delete the active pool</string>
    <string name="rename_active_pool">Rename the active pool</string>
    <string name="selection_banner">Long-click a character to see their name.</string>
    <string name="got_it">Got it</string>
    <string name="save">Save</string>
    <string name="rename_pool">Rename Pool</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="new_pool">New Pool</string>
    <string name="pool_name">Pool Name</string>
    <string name="select_all_characters_initially">Select all characters initially</string>
    <string name="new_name">New Name</string>
    <string name="cancel_pool_edits">Cancel Pool Edits?</string>
    <string name="cancel_pool_edits_message">Leaving without saving will remove the changes you have just made.</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="leave">Leave</string>
    <string name="pool_saved">Pool Saved</string>
    <string name="pool_size_req">A pool must have at least two selections</string>
    <string name="edit_pool_title">Edit Pool</string>
    <string name="ironman_results">Ironman Results</string>
    <string name="pools">Pools</string>
    <string name="unnamed_pool">Unnamed Pool</string>
    <string name="create">Create</string>
    <string name="clear_all_pool_data">Clear all pool data?</string>
    <string name="clear_pool_message">This cannot be undone.</string>
    <string name="clear">Clear</string>
    <string name="could_not_open_link">Could not open link</string>
    <string name="ironman">Ironman</string>
    <string name="smash_randomizer">Smash Randomizer</string>
</resources>
