<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/bg_start"
        android:layout_alignParentTop="true"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lineSpacingMultiplier="1.2"
            android:fontFamily="@font/css_font_light"
            android:text="@string/iron_instructions"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/text_ironman_start_pool"
                android:textSize="18sp"
                android:layout_toStartOf="@id/button_ironman_start_change_pool"
                android:fontFamily="@font/css_font"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/button_ironman_start_change_pool"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_height="wrap_content"
                android:fontFamily="@font/css_font"
                android:layout_alignParentEnd="true"
                android:textAllCaps="false"
                android:padding="0dp"
                android:text="@string/change"/>
        </RelativeLayout>
        <GridView
            android:id="@+id/grid_ironman_start_chars"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:columnWidth="52dp"
            android:numColumns="auto_fit"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@android:color/black"
        android:id="@+id/bg_start"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:src="@drawable/butt_start_selector"
            android:adjustViewBounds="true"
            android:contentDescription="@string/start"
            android:id="@+id/button_ironman_start_begin"/>

    </LinearLayout>

</RelativeLayout>

