<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_height="36dp"
        android:layout_width="72dp"
        android:background="@drawable/ic_bg_chacter_num"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="@android:color/white"
        android:includeFontPadding="false"
        android:fontFamily="@font/css_font"
        android:textSize="24dp"
        android:paddingStart="8dp"
        android:gravity="center_vertical"
        tools:ignore="SpUsage"
        android:id="@+id/text_character_number_ironman"
        android:layout_marginStart="0dp"/>

    <ImageView
        android:maxWidth="324dp"
        android:layout_width="match_parent"
        android:layout_height="324dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/image_character_ironman"
        android:layout_alignParentTop="true"
        tools:ignore="contentDescription"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/css_font"
        android:textSize="36sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:includeFontPadding="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_below="@id/image_character_ironman"
        android:id="@+id/text_character_name_ironman"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_character_name_ironman">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/css_font"
            android:textColor="@android:color/black"
            android:text="@string/on_deck"/>
        <GridView
            android:id="@+id/grid_ironman_deck"
            android:paddingStart="12dp"
            android:animateLayoutChanges="true"
            android:paddingEnd="12dp"
            android:layout_height="56dp"
            android:layout_width="wrap_content"
            android:numColumns="5"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@android:color/black"
        android:id="@+id/bg_home"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:src="@drawable/butt_lose_selector"
            android:adjustViewBounds="true"
            android:contentDescription="@string/lose"
            android:id="@+id/button_ironman_lose"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:src="@drawable/butt_win_selector"
            android:adjustViewBounds="true"
            android:contentDescription="@string/win"
            android:id="@+id/button_ironman_win"/>
    </LinearLayout>




</RelativeLayout>

