<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:id="@+id/character_number">

        <TextView
                android:layout_height="36dp"
                android:layout_width="72dp"
                android:background="@drawable/ic_bg_chacter_num"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/white"
                android:includeFontPadding="false"
                android:fontFamily="@font/css_font"
                android:textSize="24dp"
                android:gravity="center_vertical"
                tools:ignore="SpUsage"
                android:id="@+id/text_character_number_random"
                android:layout_marginStart="0dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/css_font"
                android:textSize="28sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:includeFontPadding="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:id="@+id/text_character_name_random"/>

        <!--
        android:layout_toEndOf="@id/text_character_number_random"
        -->

    </RelativeLayout>


    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pool_buttons"
            android:gravity="top"
            android:id="@+id/character_info"
            android:layout_below="@id/character_number">

        <!--android:layout_above="@id/image_character_random"/>-->

        <ImageView
                android:maxWidth="324dp"
                android:layout_width="match_parent"
                android:layout_height="324dp"

                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="32dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/image_character_random"
                android:layout_alignParentTop="true"
                tools:ignore="contentDescription"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_above="@+id/button_random"
        android:orientation="horizontal"
        android:id="@+id/pool_buttons">

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="start"
            android:tooltipText="@string/view_pool"
            android:contentDescription="@string/view_pool"
            android:src="@drawable/butt_pool_selector"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:layout_alignParentStart="true"
            tools:ignore="UnusedAttribute"
            android:id="@+id/button_view_pool"/>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_toStartOf="@+id/button_iron_man"
                android:layout_toEndOf="@id/button_view_pool"
                android:layout_alignBottom="@id/button_view_pool"
                android:layout_alignBaseline="@id/button_view_pool"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:orientation="horizontal">


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/css_font"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:id="@+id/title_active_pool"
                    android:text="@string/title_pool"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/css_font"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:id="@+id/text_pool_name"/>

        </LinearLayout>


        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:tooltipText="@string/begin_ironman"
            android:contentDescription="@string/begin_ironman"
            android:src="@drawable/butt_ironman_selector"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            tools:ignore="UnusedAttribute"
            android:id="@+id/button_iron_man"/>
    </RelativeLayout>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:tooltipText="@string/new_random_character"
        android:contentDescription="@string/new_random_character"
        android:src="@drawable/butt_random_selector"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        tools:ignore="UnusedAttribute"
        android:id="@+id/button_random"/>

</RelativeLayout>